# guava-starter

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: quickstart.md  sdk-reference.md  use-cases.md
examples/automotive/financing_prequalification/: __main__.py
examples/automotive/lease_end_outreach/: __main__.py
examples/automotive/post_service_followup/: __main__.py
examples/automotive/recall_notification/: __main__.py
examples/automotive/service_reminder/: __main__.py
examples/education/alumni_fundraising/: __main__.py
examples/education/attendance_checkin/: __main__.py
examples/education/course_feedback/: __main__.py
examples/education/enrollment_followup/: __main__.py
examples/education/tuition_reminders/: __main__.py
examples/financial_services/collections_outreach/: __main__.py
examples/financial_services/customer_onboarding/: __main__.py
examples/financial_services/fraud_verification/: __main__.py
examples/financial_services/investment_survey/: __main__.py
examples/financial_services/loan_followup/: __main__.py
examples/government/benefits_enrollment/: __main__.py
examples/government/emergency_notification/: __main__.py
examples/government/permit_followup/: __main__.py
examples/government/presidential_approval_survey/: __main__.py
examples/government/public_health_survey/: __main__.py
examples/government/utility_shutoff_warning/: __main__.py
examples/healthcare/appointment_reminders/: __main__.py
examples/healthcare/insurance_preauth/: __main__.py
users/: README.md  prd.md
(+773 files in other folders)
